# esp_hal_issue_4573_repro

./: .gitignore  Cargo.toml  README.md  esp-hal.patch  mbedtls.patch
.cargo/: config.toml
src/: main.rs
src/netclients/: edgenal_tls.rs  mod.rs
src/osdep/: mod.rs  startup.rs
src/osdep/memory/: mem_esp.rs  mod.rs
src/osdep/network/: mod.rs  net_esp.rs
src/osdep/starter/: mod.rs  starter_esp.rs
src/osdep/storage/: mod.rs  storage_esp.rs
src/osdep/time/: mod.rs  time_esp.rs
