[package]
name = "xapi_rs"
version = "0.1.0"
edition = "2024"

[features]
default = ["tracing"]
defmt = []
log = []
unified_memory = []
external_strings = []
tracing = ["dep:tabled"]

[dependencies]
cfg-if = "1.0.0"
edge-http = { version = "0.6", features = ["embedded-svc"] }
edge-nal = { version = "0.5" }
edge-nal-embassy = "0.6"
embassy-executor = { version = "0.9", features = ["executor-thread", "nightly"] }
embassy-net = { version = "0.7", features = ["dhcpv4", "dns", "tcp", "proto-ipv4", "medium-ip", "udp", "multicast", "mdns", "log"] }
embassy-sync = { version = "0.7" }
embassy-time = { version = "0.5", features = [] }
embedded-io = { version = "0.6", features = ["alloc"], default-features = false }
embedded-io-async = { version = "0.6", features = ["alloc"], default-features = false }
esp-alloc = { path = "../esp-hal/esp-alloc", default-features = false, features = ["nightly", "internal-heap-stats", "global"] }
esp-backtrace = { path = "../esp-hal/esp-backtrace", features = ["esp32s3", "println", "panic-handler", "semihosting"] }
esp-bootloader-esp-idf = { path = "../esp-hal/esp-bootloader-esp-idf", features = ["log-04", "esp32s3"] }
esp-hal = { path = "../esp-hal/esp-hal", features = ["esp32s3", "unstable", "log-04", "psram", "rt", "exception-handler"] }
esp-rtos = { path = "../esp-hal/esp-rtos", features = ["esp32s3", "embassy", "alloc", "esp-radio"] }
esp-mbedtls = { path = "../esp-mbedtls/esp-mbedtls", features = ["esp32s3", "esp-radio", "async", "edge-nal"] }
esp-println = { path = "../esp-hal/esp-println", default-features = false, features = ["critical-section", "esp32s3", "log-04", "uart"] }
esp-radio = { path = "../esp-hal/esp-radio", features = ["esp32s3", "log-04", "wifi", "unstable", "smoltcp"] }
log = { version = "0.4", default-features = false }
no-std-compat2 = { version = "0.4.5", features = ["alloc"] }
string-alloc = { version = "0.0.3", features=["serde"]}
tabled = {version = "0.20", default-features = false, optional = true}
whisk = "0.13.0"
static_cell = "2.1"

[build-dependencies]
cfg-if = "1.0.0"
esp-idf-part = "0.6.0"

[patch.crates-io]
edge-nal = {path = "../edge-net/edge-nal"}
edge-nal-embassy = {path = "../edge-net/edge-nal-embassy"}
edge-http = {path = "../edge-net/edge-http"}

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[profile.dev.package.esp-radio]
opt-level = 3

[profile.dev.package.esp-hal]
opt-level = 3